new/prusti/tests/pass/parse/forall_fail.stderr
error: expected `(`
  --> $DIR/forall_fail.rs:10:12
   |
10 | #[requires(forall)]
   |            ^^^^^^

error: expected `|`
  --> $DIR/forall_fail.rs:13:18
   |
13 | #[requires(forall())]
   |                  ^^

error: expected `|`
  --> $DIR/forall_fail.rs:16:18
   |
16 | #[requires(forall(|))]
   |                  ^^^

error: expected Prusti operator
  --> $DIR/forall_fail.rs:19:23
   |
19 | #[requires(forall(||) 1+1)]
   |                       ^

error: expected `:`
  --> $DIR/forall_fail.rs:22:21
   |
22 | #[requires(forall(|a, b| true))]
   |                     ^

error: expected Prusti operator
  --> $DIR/forall_fail.rs:25:23
   |
25 | #[requires(forall(||) || forall(||))]
   |                       ^^

error: expected tuple
  --> $DIR/forall_fail.rs:28:18
   |
28 | #[requires(forall(|| 1+1 == 1+1, triggers=[1]))]
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected tuple
  --> $DIR/forall_fail.rs:31:18
   |
31 | #[requires(forall(|| true, triggers=[(1,2), 1]))]
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors

